// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirdropDistributor gas claim gas 100 eligible users 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 95208,
}
`;

exports[`AirdropDistributor gas claim gas 1000 eligible users 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 97665,
}
`;

exports[`AirdropDistributor gas claim gas 10000 eligible users 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 101027,
}
`;

exports[`AirdropDistributor gas claim gas 50000 eligible users 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 102919,
}
`;

exports[`AirdropDistributor gas updateRoot gas 100 users 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47365,
}
`;

exports[`AirdropDistributor gas updateRoot gas 1000 users 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47365,
}
`;

exports[`AirdropDistributor gas updateRoot gas 10000 users 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47365,
}
`;

exports[`AirdropDistributor gas updateRoot gas 50000 users 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47353,
}
`;
